--- a/index.html
+++ b/index.html
@@ -1,162 +1,271 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Insterticial fullscreen DCM</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta data-template-name="Template_Intro_Fullscreen">
-    <meta name="ad.size" content="width=320,height=480">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="main.css">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta data-template-name="Template_Intro_Fullscreen" />
+    <meta name="ad.size" content="width=320,height=480" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="main.css" />
+  </head>
 
-<body>
+  <body>
     <div id="backDropDiv"></div>
     <div id="dc_container">
-        <div id="dc_content">
-            <div id="dc_bgImage"></div>
-            <div id="internalDiv">
-                <div id="loader-container">
-                    <div id="loader"><img id="loader" src="dl_loading.gif"></div>
-                </div>
-                <div id="dc_btnClose"><img src="close.png"></div>
+      <div id="dc_content">
+        <div id="dc_bgImage"></div>
+        <div id="internalDiv">
+          <div id="loader-container">
+            <div id="loader"><img id="loader" src="dl_loading.gif" /></div>
+          </div>
+          <div id="dc_btnClose"><img src="close.png" /></div>
 
-                <div id="game" class="scene">
-                    <div class="background game_background positionAb">
-                        <img src="images/background.jpg" class="image">
-                    </div>
-
-                    <!-- Put the game assets inside the scene_container div -->
-                    <div class="scene_container">
-                        <div id="game_timer" class="game_timer game_intro">
-                            <div class="game_clock">
-                                <img src="images/clock.png" class="image">
-                            </div>
-                            <span class="game_current_time">0:25</span>
-                        </div>
-                        <div class="game_container column-center">
-                            <div class="logo">
-                                <img src="images/logo.png" class="image">
-                            </div>
-
-                            <div class="puzzle_wrapper positionRel">
-                                <img id="car_lines" src="images/car_lines.png" class="image car_part">
-                                <img id="carPiece_1" src="images/car_piece_1.png" class="image car_part positionAbFull">
-                                <img id="carPiece_2" src="images/car_piece_2.png" class="image car_part positionAbFull">
-                                <img id="carPiece_3" src="images/car_piece_3.png" class="image car_part positionAbFull">
-                                <img id="carPiece_4" src="images/car_piece_4.png" class="image car_part positionAbFull">
-                                <img id="carPiece_5" src="images/car_piece_5.png" class="image car_part positionAbFull">
-                                <img id="carPiece_6" src="images/car_piece_6.png" class="image car_part positionAbFull">
-                                <img id="carComplete" src="images/car_complete.png"
-                                    class="image car_part positionAbFull">
-                            </div>
-
-                            <div class="messages positionRel">
-                                <img id="message_intro" src="images/message_intro.png" class="image message">
-                                <img id="message_1" src="images/message_piece_1.png"
-                                    class="image message positionAbFull">
-                                <img id="message_2" src="images/message_piece_2.png"
-                                    class="image message positionAbFull">
-                                <img id="message_3" src="images/message_piece_3.png"
-                                    class="image message positionAbFull">
-                                <img id="message_4" src="images/message_piece_4.png"
-                                    class="image message positionAbFull">
-                                <img id="message_5" src="images/message_piece_5.png"
-                                    class="image message positionAbFull">
-                                <img id="message_6" src="images/message_piece_6.png"
-                                    class="image message positionAbFull">
-                                    <img id="message_7" src="images/message_piece_7.png"
-                                    class="image message positionAbFull">
-                                <img id="message_finish" src="images/message_complete.png"
-                                    class="image message positionAbFull">
-                            </div>
-
-                            <div class="buttons positionAbFull">
-                                <div id="button_1" class="button positionAb">
-                                    <div class="button_wrapper positionRel">
-                                        <img id="piece_1_off" src="images/piece_1_off.png" class="image button_off">
-                                        <img id="piece_1_on" src="images/piece_1_on.png"
-                                            class="image button_on positionAbFull">
-                                    </div>
-                                </div>
-                                <div id="button_2" class="button positionAb">
-                                    <div class="button_wrapper positionRel">
-                                        <img id="piece_2_off" src="images/piece_2_off.png" class="image button_off">
-                                        <img id="piece_2_on" src="images/piece_2_on.png"
-                                            class="image button_on positionAbFull">
-                                    </div>
-                                </div>
-                                <div id="button_3" class="button positionAb">
-                                    <div class="button_wrapper positionRel">
-                                        <img id="piece_3_off" src="images/piece_3_off.png" class="image button_off">
-                                        <img id="piece_3_on" src="images/piece_3_on.png"
-                                            class="image button_on positionAbFull">
-                                    </div>
-                                </div>
-                                <div id="button_4" class="button positionAb">
-                                    <div class="button_wrapper positionRel">
-                                        <img id="piece_4_off" src="images/piece_4_off.png" class="image button_off">
-                                        <img id="piece_4_on" src="images/piece_4_on.png"
-                                            class="image button_on positionAbFull">
-                                    </div>
-                                </div>
-                                <div id="button_5" class="button positionAb">
-                                    <div class="button_wrapper positionRel">
-                                        <img id="piece_5_off" src="images/piece_5_off.png" class="image button_off">
-                                        <img id="piece_5_on" src="images/piece_5_on.png"
-                                            class="image button_on positionAbFull">
-                                    </div>
-                                </div>
-                                <div id="button_6" class="button positionAb">
-                                    <div class="button_wrapper positionRel">
-                                        <img id="piece_6_off" src="images/piece_6_off.png" class="image button_off">
-                                        <img id="piece_6_on" src="images/piece_6_on.png"
-                                            class="image button_on positionAbFull">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div id="endFrame" class="scene">
-                    <div class="background endFrame_background positionAb">
-                        <img src="images/endcard_background.jpg" class="image">
-                    </div>
-
-                    <!-- Put the endFrame assets inside the scene_container div -->
-                    <div class="scene_container">
-                        <div class="endFrame_copys column-center">
-                            <div class="endFrame_logo">
-                                <img src="images/logo.png" class="image">
-                            </div>
-                            <div class="endFrame_txt">
-                                <img src="images/endcard_txt.png" class="image">
-                            </div>
-                            <div class="cta">
-                                <img src="images/cta.png" class="image">
-                            </div>
-                           
-                        </div>
-                    </div>
-                    <div class="cta_wrapper"></div>
-                </div>
-
-                <div id="dc_background_exit"></div>
+          <div id="game" class="scene">
+            <div class="background game_background positionAb">
+              <img src="images/background.jpg" class="image" />
             </div>
+
+            <!-- Put the game assets inside the scene_container div -->
+            <div class="scene_container">
+              <div id="game_timer" class="game_timer game_intro">
+                <div class="game_clock">
+                  <img
+                    style="display: none"
+                    src="images/clock.png"
+                    class="image"
+                  />
+                </div>
+                <span style="display: none" class="game_current_time"
+                  >0:25</span
+                >
+              </div>
+              <div class="game_container column-center">
+                <div class="logo">
+                  <img src="images/logo.png" class="image" />
+                </div>
+
+                <div class="puzzle_wrapper positionRel">
+                  <img
+                    id="car_lines"
+                    src="images/car_lines.png"
+                    class="image car_part"
+                  />
+                  <img
+                    id="carPiece_1"
+                    src="images/car_piece_1.png"
+                    class="image car_part positionAbFull"
+                  />
+                  <img
+                    id="carPiece_2"
+                    src="images/car_piece_2.png"
+                    class="image car_part positionAbFull"
+                  />
+                  <img
+                    id="carPiece_3"
+                    src="images/car_piece_3.png"
+                    class="image car_part positionAbFull"
+                  />
+                  <img
+                    id="carPiece_4"
+                    src="images/car_piece_4.png"
+                    class="image car_part positionAbFull"
+                  />
+                  <img
+                    id="carPiece_5"
+                    src="images/car_piece_5.png"
+                    class="image car_part positionAbFull"
+                  />
+                  <img
+                    id="carPiece_6"
+                    src="images/car_piece_6.png"
+                    class="image car_part positionAbFull"
+                  />
+                  <img
+                    id="carComplete"
+                    src="images/car_complete.png"
+                    class="image car_part positionAbFull"
+                  />
+                </div>
+
+                <div class="messages positionRel">
+                  <img
+                    id="message_intro"
+                    src="images/message_intro.png"
+                    class="image message"
+                  />
+                  <img
+                    id="message_1"
+                    src="images/message_piece_1.png"
+                    class="image message positionAbFull"
+                  />
+                  <img
+                    id="message_2"
+                    src="images/message_piece_2.png"
+                    class="image message positionAbFull"
+                  />
+                  <img
+                    id="message_3"
+                    src="images/message_piece_3.png"
+                    class="image message positionAbFull"
+                  />
+                  <img
+                    id="message_4"
+                    src="images/message_piece_4.png"
+                    class="image message positionAbFull"
+                  />
+                  <img
+                    id="message_5"
+                    src="images/message_piece_5.png"
+                    class="image message positionAbFull"
+                  />
+                  <img
+                    id="message_6"
+                    src="images/message_piece_6.png"
+                    class="image message positionAbFull"
+                  />
+                  <img
+                    id="message_7"
+                    src="images/message_piece_7.png"
+                    class="image message positionAbFull"
+                  />
+                  <img
+                    id="message_finish"
+                    src="images/message_complete.png"
+                    class="image message positionAbFull"
+                  />
+                </div>
+
+                <div class="buttons positionAbFull">
+                  <div id="button_1" class="button positionAb">
+                    <div class="button_wrapper positionRel">
+                      <img
+                        id="piece_1_off"
+                        src="images/piece_1_off.png"
+                        class="image button_off"
+                      />
+                      <img
+                        id="piece_1_on"
+                        src="images/piece_1_on.png"
+                        class="image button_on positionAbFull"
+                      />
+                    </div>
+                  </div>
+                  <div id="button_2" class="button positionAb">
+                    <div class="button_wrapper positionRel">
+                      <img
+                        id="piece_2_off"
+                        src="images/piece_2_off.png"
+                        class="image button_off"
+                      />
+                      <img
+                        id="piece_2_on"
+                        src="images/piece_2_on.png"
+                        class="image button_on positionAbFull"
+                      />
+                    </div>
+                  </div>
+                  <div id="button_3" class="button positionAb">
+                    <div class="button_wrapper positionRel">
+                      <img
+                        id="piece_3_off"
+                        src="images/piece_3_off.png"
+                        class="image button_off"
+                      />
+                      <img
+                        id="piece_3_on"
+                        src="images/piece_3_on.png"
+                        class="image button_on positionAbFull"
+                      />
+                    </div>
+                  </div>
+                  <div id="button_4" class="button positionAb">
+                    <div class="button_wrapper positionRel">
+                      <img
+                        id="piece_4_off"
+                        src="images/piece_4_off.png"
+                        class="image button_off"
+                      />
+                      <img
+                        id="piece_4_on"
+                        src="images/piece_4_on.png"
+                        class="image button_on positionAbFull"
+                      />
+                    </div>
+                  </div>
+                  <div id="button_5" class="button positionAb">
+                    <div class="button_wrapper positionRel">
+                      <img
+                        id="piece_5_off"
+                        src="images/piece_5_off.png"
+                        class="image button_off"
+                      />
+                      <img
+                        id="piece_5_on"
+                        src="images/piece_5_on.png"
+                        class="image button_on positionAbFull"
+                      />
+                    </div>
+                  </div>
+                  <div id="button_6" class="button positionAb">
+                    <div class="button_wrapper positionRel">
+                      <img
+                        id="piece_6_off"
+                        src="images/piece_6_off.png"
+                        class="image button_off"
+                      />
+                      <img
+                        id="piece_6_on"
+                        src="images/piece_6_on.png"
+                        class="image button_on positionAbFull"
+                      />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="endFrame" class="scene">
+            <div class="background endFrame_background positionAb">
+              <img src="images/endcard_background.jpg" class="image" />
+            </div>
+
+            <!-- Put the endFrame assets inside the scene_container div -->
+            <div class="scene_container">
+              <div class="endFrame_copys column-center">
+                <div class="endFrame_logo">
+                  <img src="images/logo.png" class="image" />
+                </div>
+                <div class="endFrame_txt">
+                  <img src="images/endcard_txt.png" class="image" />
+                </div>
+                <div class="cta">
+                  <img src="images/cta.png" class="image" />
+                </div>
+              </div>
+            </div>
+            <div class="cta_wrapper"></div>
+          </div>
+
+          <div id="dc_background_exit"></div>
         </div>
+      </div>
     </div>
 
-    <script>var clickThrough = "#clickThrough";</script>
+    <script>
+      var clickThrough = "#clickThrough";
+    </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.1.0/dist/Draggable.min.js"></script>
     <script src="main.js" type="text/javascript"></script>
-</body>
-
+  </body>
 </html>
